[metadata]
name = pyctr
version = attr: pyctr.__version__
author = Ian Burgwin
author_email = ian@ianburgwin.net
url = https://github.com/ihaveamac/pyctr
description = Python library to parse several Nintendo 3DS files
long_description: file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.8
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages: find:
install_requires =
    pycryptodomex>=3.9,<4

[options.extras_require]
images = Pillow>=8.2

[options.packages.find]
exclude =
    examples*
    tests*
